--- a/sample-client/build.gradle
+++ b/sample-client/build.gradle
@@ -19,9 +19,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile group: 'com.sparkjava', name: 'spark-core', version:'2.5'
-    compile group: 'com.sparkjava', name: 'spark-template-velocity', version:'2.3'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'commons-codec:commons-codec:1.8'
-    testCompile("junit:junit")
+    implementation group: 'com.sparkjava', name: 'spark-core', version:'2.9.2'
+    implementation group: 'com.sparkjava', name: 'spark-template-velocity', version:'2.3'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'commons-codec:commons-codec:1.8'
 }
