--- a/wondough/build.gradle
+++ b/wondough/build.gradle
@@ -19,9 +19,10 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile group: 'com.sparkjava', name: 'spark-core', version:'2.5'
-    compile group: 'com.sparkjava', name: 'spark-template-velocity', version:'2.3'
-    compile group: 'org.xerial', name:'sqlite-jdbc', version:'3.8.11.2'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'commons-codec:commons-codec:1.8'
+    implementation group: 'com.sparkjava', name: 'spark-core', version:'2.9.2'
+    implementation group: 'com.sparkjava', name: 'spark-template-velocity', version:'2.3'
+    implementation group: 'org.xerial', name:'sqlite-jdbc', version:'3.8.11.2'
+    implementation 'org.slf4j:slf4j-simple:1.7.21'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'commons-codec:commons-codec:1.8'
 }
